[gd_scene load_steps=3 format=3 uid="uid://d0xq6y7t2f5e"]

[ext_resource type="Script" uid="uid://crypto_popup_script" path="res://components/popups/crypto_popup_ui.gd" id="1_ah1wq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.1, 1)

[node name="CryptoPopupUI" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_ah1wq")
default_window_size = Vector2(320, 300)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PriceChart" type="ChartComponent" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 120)
lock_x_min = true
lock_y_min = true
palette = [Color(1, 0.6, 0.2, 1)]

[node name="InfoGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2
theme_override_constants/hseparation = 8
theme_override_constants/vseparation = 4

[node name="SymbolLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "Symbol"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelSymbol" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "Name"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="PriceLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "Price"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelPrice" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="VolatilityLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "Volatility"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelVolatility" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="BlockSizeLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "Block Size"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelBlockSize" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="BlockTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "Block Time"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelBlockTime" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="PowerLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "Power Req."
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelPower" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="AllTimeHighLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "All Time High"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelAllTimeHigh" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="OwnedLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
text = "Owned"
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)

[node name="LabelOwned" type="Label" parent="MarginContainer/VBoxContainer/InfoGrid"]
unique_name_in_owner = true
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
